# embedded-boat-lift

./: .gitignore  CMakeLists.txt  README.md  cgi.h  main.c  mygatt.gatt  ssi.h
Pico/: blinkLED.py  connectWIFI.py
html/: index.shtml
pico #2 (server)/: connectWIFI_BoatLift.py
